Fix html & body size when overflowing

--- a/global-styles.css
+++ b/global-styles.css
@@ -4,5 +4,5 @@ body {
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
 }
